--- a/bulma sanbox/HomeEmployee.html
+++ b/bulma sanbox/HomeEmployee.html
@@ -1,23 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        html {
-            background: url("https://wallpaperaccess.com/full/260161.jpg");
-            background-size: cover;
-            }
-    </style>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content=""width="device-width, intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
-    <title>Document</title>
+    <title>Bulma Sandbox</title>
 </head>
 <body>
     <div class="container">
-        <!-- NAVBAR -->
+
+           <!-- NAVBAR -->
         <div class="block">
             <nav class="navbar">
                 <div class="navbar-start">
@@ -42,30 +36,39 @@
 
                 <div class="navbar-end">
                     <a href="#" class="navbar-item">Home</a>
-                    <a href="#" class="navbar-item">About Us</a>
-                    <a href="#" class="navbar-item">Contact</a>
+
+
                 </div>
 
             </nav>
 
         </div>
-        <h1>New Event</h1>
+        <!--HEADINGS -->
+        <div class="block">
+            <h1 class="title is-1">Home</h1>
 
-        <form method="POST">
-            {% csrf_token %}
-            {{ form }}
-            <button type="submit">Save</button>
-        </form>
+        </div>
+        <!-- CONTENT -->
+        <div class="block">
+        <p class="content is-medium">Welcome to Reign Events!</p>
+        </div>
 
-{#        {% if user.is_employee %}#}
-{#        <p>This is an employee account.</p>#}
-{#        {% else %}#}
-{#        <p>Please login to see this page.</p>#}
-{#        {% endif %}#}
-{##}
-{#    {% if event %}#}
-{#        <a href="{% url 'delete_event' event.id %}">Delete</a>#}
-{#    {% endif %}#}
-    </div>
+        <!-- NOTIFICATIONS-->
+        <div class="block">
+        <div class="notification">
+        <button class="delete"></button>
+        Event request for November 30th, 2019!
+
+        </div>
+        </div>
+
+        <!-- TAGS -->
+        <div class="block">
+            <span class="tag is-info is-large">Events</span>
+            <span class="tag is-warning is-large">Inventory</span>
+            <span class="tag is-danger is-large">Staff</span>
+        </div>
+
+        </div>
 </body>
 </html>
