--- a/bulma sanbox/event confirmation.html
+++ b/bulma sanbox/event confirmation.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <style>
@@ -8,12 +8,11 @@
             }
     </style>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content=""width="device-width, intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
-    <title>Document</title>
+    <title>Reign Events</title>
 </head>
 <body>
     <div class="container">
@@ -49,23 +48,32 @@
             </nav>
 
         </div>
-        <h1>New Event</h1>
 
-        <form method="POST">
-            {% csrf_token %}
-            {{ form }}
-            <button type="submit">Save</button>
-        </form>
+        <!--HEADINGS -->
+        <div class="block">
+            <h1 class="title is-1">Confirmation</h1>
 
-{#        {% if user.is_employee %}#}
-{#        <p>This is an employee account.</p>#}
-{#        {% else %}#}
-{#        <p>Please login to see this page.</p>#}
-{#        {% endif %}#}
-{##}
-{#    {% if event %}#}
-{#        <a href="{% url 'delete_event' event.id %}">Delete</a>#}
-{#    {% endif %}#}
-    </div>
+
+        </div>
+        <!-- CONTENT -->
+        <div class="block">
+        <p class="content is-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, rem!</p>
+        </div>
+
+        <!--MESSAGES -->
+        <div class="block">
+        <article class="message is-success">
+            <div class="message-header">
+                <p>Event Confirmation</p>
+            </div>
+            <div class="message-body">
+                You're event request has been submitted!
+            </div>
+        </article>
+        </div>
+
+
+
+        </div>
 </body>
 </html>
